--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
     "mongoose": "^5.5.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.3.0",
     "nodemon": "^1.18.11"
