--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "0.0.1",
     "aws-sdk": "^2.644.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -21,6 +22,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.3.0",
-    "nodemon": "^1.18.11"
+    "nodemailer": "^6.4.6",
+    "nodemon": "^1.19.4",
+    "save": "^2.4.0"
   }
 }
